# OSCoreSim

./: .gitignore  CMakeLists.txt  OSCoreSim.sln  PROJECT_ARCHITECTURE.md  README.md
OSCoreSim/: OSCoreSim.vcxproj  OSCoreSim.vcxproj.filters
OSCoreSimTests/: OSCoreSimTests.vcxproj  OSCoreSimTests.vcxproj.filters
docs/: visual_studio_运行说明.md
docs/demo_scenarios/: 01_调度动态性.md  02_单步决策执行.md  03_状态持久化.md  04_并发数据共享.md  05_内存碎片治理.md  06_终端可视化.md
docs/diagnostics/: P0_runtime_diagnostic_report.md  P1_regression_matrix.md  P2_root_cause_analysis.md  P4_full_regression_report.md  P5_merge_readiness_report.md  chinese_text_audit.md  code_commenting_report.md
docs/report_materials/: OS课程设计报告_模板内容.md  报告截图清单.md  核心流程说明.md
release_package/: 提交前检查清单.md
release_package/1_源代码/: .gitkeep
release_package/2_实习报告/: .gitkeep
release_package/3_发行版程序及测试环境/: 运行说明.md
release_package/3_发行版程序及测试环境/data/: .gitkeep
src/: main.cpp
src/app/: ConsoleApp.cpp  ConsoleApp.h  MenuConsole.cpp  MenuConsole.h
src/auth/: UserAccount.h  UserManager.cpp  UserManager.h
src/ipc/: InstanceGuard.cpp  InstanceGuard.h  NamedPipeClient.cpp  NamedPipeClient.h  NamedPipeServer.cpp  NamedPipeServer.h
src/kernel/: CommandDispatcher.cpp  CommandDispatcher.h  CommandTypes.h  Kernel.cpp  Kernel.h
src/memory/: MemoryBlock.h  MemoryManager.cpp  MemoryManager.h
src/persistence/: SnapshotStore.cpp  SnapshotStore.h
src/process/: PCB.h  ProcessManager.cpp  ProcessManager.h  Scheduler.cpp  Scheduler.h
src/util/: BlockingQueue.h  Logger.h  StringUtil.h  TablePrinter.h
src/vfs/: VirtualFileSystem.cpp  VirtualFileSystem.h
src/view/: OverviewRenderer.cpp  OverviewRenderer.h
tests/: 01_user_test.txt  02_process_test.txt  03_memory_test.txt  04_scheduler_test.txt  05_persistence_test.txt  06_vfs_test.txt  07_overview_test.txt  08_multi_instance_test.md  demo_commands.txt  full_demo_commands.txt  unit_tests.cpp
tests/diagnostics/: 00_clean_boot_test.txt  01_user_session_test.txt  02_process_test.txt  03_memory_test.txt  04_scheduler_test.txt  05_persistence_test.txt  06_vfs_test.txt  07_full_regression_test.txt  08_vfs_unicode_multiline_test.txt  09_visualization_format_test.txt  10_chinese_text_ui_test.txt  11_scheduler_auto_stop_test.txt  11_visual_demo.txt  12_scheduler_empty_start_test.txt
tools/: decode_octal.py  run_regression.ps1
(+1 files in other folders)
